--- a/packages/ramp-core/package.json
+++ b/packages/ramp-core/package.json
@@ -1,45 +1,49 @@
 {
-    "name": "ramp-core",
-    "version": "0.1.0",
-    "private": true,
-    "scripts": {
-        "serve": "vue-cli-service serve",
-        "build": "vue-cli-service build --target lib --formats umd --name r4mp src/main.ts 2>&1",
-        "test:unit": "vue-cli-service test:unit",
-        "test:e2e": "vue-cli-service test:e2e",
-        "lint": "vue-cli-service lint"
-    },
-    "dependencies": {
-        "core-js": "^3.4.4",
-        "ramp-geoapi": "0.0.1",
-        "vue": "^2.6.10",
-        "vue-class-component": "^7.0.2",
-        "vue-property-decorator": "^8.3.0",
-        "vuex": "^3.1.2"
-    },
-    "devDependencies": {
-        "@fullhuman/postcss-purgecss": "~1.3.0",
-        "@types/jest": "^24.0.19",
-        "@vue/cli-plugin-babel": "^4.1.0",
-        "@vue/cli-plugin-e2e-cypress": "^4.1.0",
-        "@vue/cli-plugin-eslint": "^4.1.0",
-        "@vue/cli-plugin-typescript": "^4.1.0",
-        "@vue/cli-plugin-unit-jest": "^4.1.0",
-        "@vue/cli-plugin-vuex": "^4.1.0",
-        "@vue/cli-service": "^4.1.0",
-        "@vue/eslint-config-prettier": "^5.0.0",
-        "@vue/eslint-config-typescript": "^4.0.0",
-        "@vue/test-utils": "1.0.0-beta.29",
-        "eslint": "^5.16.0",
-        "eslint-plugin-prettier": "^3.1.1",
-        "eslint-plugin-vue": "^6.0.0",
-        "postcss-nested": "~4.2.1",
-        "prettier": "^1.19.1",
-        "sass": "^1.23.7",
-        "sass-loader": "^8.0.0",
-        "tailwindcss": "~1.1.4",
-        "tslib": "~1.10.0",
-        "typescript": "~3.5.3",
-        "vue-template-compiler": "^2.6.10"
-    }
+  "name": "ramp-core",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build --target lib --formats umd --name r4mp src/api/index.ts 2>&1",
+    "test:unit": "vue-cli-service test:unit",
+    "test:e2e": "vue-cli-service test:e2e",
+    "lint": "vue-cli-service lint"
+  },
+  "dependencies": {
+    "@types/clone-deep": "~4.0.1",
+    "clone-deep": "~4.0.1",
+    "core-js": "^3.4.4",
+    "deepmerge": "~4.2.2",
+    "ramp-geoapi": "0.0.1",
+    "vue": "^2.6.10",
+    "vue-class-component": "^7.0.2",
+    "vue-property-decorator": "^8.3.0",
+    "vuex": "^3.1.2",
+    "vuex-pathify": "~1.4.1"
+  },
+  "devDependencies": {
+    "@fullhuman/postcss-purgecss": "~1.3.0",
+    "@types/jest": "^24.0.19",
+    "@vue/cli-plugin-babel": "^4.1.0",
+    "@vue/cli-plugin-e2e-cypress": "^4.1.0",
+    "@vue/cli-plugin-eslint": "^4.1.0",
+    "@vue/cli-plugin-typescript": "^4.1.0",
+    "@vue/cli-plugin-unit-jest": "^4.1.0",
+    "@vue/cli-plugin-vuex": "^4.1.0",
+    "@vue/cli-service": "^4.1.0",
+    "@vue/eslint-config-prettier": "^5.0.0",
+    "@vue/eslint-config-typescript": "^4.0.0",
+    "@vue/test-utils": "1.0.0-beta.29",
+    "eslint": "^5.16.0",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-vue": "^6.0.0",
+    "postcss-nested": "~4.2.1",
+    "prettier": "^1.19.1",
+    "sass": "^1.23.7",
+    "sass-loader": "^8.0.0",
+    "tailwindcss": "~1.1.4",
+    "tslib": "~1.10.0",
+    "typescript": "~3.5.3",
+    "vue-template-compiler": "^2.6.10"
+  }
 }
