--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,12 @@
 {
-    "cSpell.words": ["behaviour", "geoapi", "pathify", "prefetch", "vetur"]
+    "cSpell.words": [
+        "behaviour",
+        "fullhuman",
+        "geoapi",
+        "pathify",
+        "prefetch",
+        "tailwindcss",
+        "tslib",
+        "vetur"
+    ]
 }
