--- a/packages/ramp-core/package.json
+++ b/packages/ramp-core/package.json
@@ -3,16 +3,14 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "serve": "vue-cli-service serve",
-        "build": "vue-cli-service build --target lib --formats umd --name r4mp src/main.ts 2>&1",
+        "serve": "vue-cli-service serve src/main-serve.ts",
+        "build": "vue-cli-service build --target lib --formats umd --name RAMP src/main-build.ts 2>&1",
         "test:unit": "vue-cli-service test:unit",
         "test:e2e": "vue-cli-service test:e2e",
+        "host": "http-server . -p 3001",
         "lint": "vue-cli-service lint"
     },
     "dependencies": {
-        "@types/clone-deep": "~4.0.1",
-        "clone-deep": "~4.0.1",
-        "core-js": "^3.4.4",
         "deepmerge": "~4.2.2",
         "ramp-geoapi": "0.0.1",
         "vue": "^2.6.10",
@@ -22,6 +20,7 @@
         "vuex-pathify": "~1.4.1"
     },
     "devDependencies": {
+        "@types/clone-deep": "~4.0.1",
         "@fullhuman/postcss-purgecss": "~1.3.0",
         "@types/jest": "^24.0.19",
         "@vue/cli-plugin-babel": "^4.1.0",
@@ -37,6 +36,7 @@
         "eslint": "^5.16.0",
         "eslint-plugin-prettier": "^3.1.1",
         "eslint-plugin-vue": "^6.0.0",
+        "http-server": "^0.12.0",
         "postcss-nested": "~4.2.1",
         "prettier": "^1.19.1",
         "sass": "^1.23.7",
