chore: init function
- add callback to run initRAMP function as soon as the library is loaded if the function is available on the global scope
- add eventbut to InstanceAPI

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "cSpell.words": [
+        "Proxied",
         "behaviour",
         "fullhuman",
         "geoapi",
@@ -7,6 +8,8 @@
         "prefetch",
         "tailwindcss",
         "tslib",
-        "vetur"
+        "unminified",
+        "vetur",
+        "wany"
     ]
 }
