--- a/packages/ramp-core/package.json
+++ b/packages/ramp-core/package.json
@@ -44,6 +44,7 @@
         "tailwindcss": "~1.1.4",
         "tslib": "~1.10.0",
         "typescript": "~3.5.3",
-        "vue-template-compiler": "^2.6.10"
+        "vue-template-compiler": "^2.6.10",
+        "wrapper-webpack-plugin": "2.1.0"
     }
 }
