chore: core setup
- fix circular import in main-build.ts
- add mixin plugin to keep an iApi reference on each R4MP Vue instance

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,10 +2,12 @@
     "cSpell.words": [
         "Proxied",
         "behaviour",
+        "deepmerge",
         "fullhuman",
         "geoapi",
         "pathify",
         "prefetch",
+        "purgecss",
         "tailwindcss",
         "tslib",
         "unminified",
