chore: external fixture sample
- created a sample fixture called diligord which is supplied and loaded by
  host page
- renamed some stuff

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "Proxied",
         "behaviour",
         "deepmerge",
+        "diligord",
         "fullhuman",
         "geoapi",
         "pathify",
