add geosearch panel part 1

--- a/packages/ramp-core/tsconfig.json
+++ b/packages/ramp-core/tsconfig.json
@@ -6,6 +6,7 @@
         "importHelpers": true,
         "moduleResolution": "node",
         "experimentalDecorators": true,
+        "resolveJsonModule": true,
         "esModuleInterop": true,
         "allowSyntheticDefaultImports": true,
         "strictPropertyInitialization": true,
