--- a/packages/ramp-core/package.json
+++ b/packages/ramp-core/package.json
@@ -21,8 +21,9 @@
         "vuex-pathify": "~1.4.1"
     },
     "devDependencies": {
-        "@types/clone-deep": "~4.0.1",
         "@fullhuman/postcss-purgecss": "~1.3.0",
+        "@tailwindcss/custom-forms": "^0.2.1",
+        "@types/clone-deep": "~4.0.1",
         "@types/jest": "^24.0.19",
         "@vue/cli-plugin-babel": "^4.1.0",
         "@vue/cli-plugin-e2e-cypress": "^4.1.0",
