--- a/packages/ramp-geoapi/tsconfig.json
+++ b/packages/ramp-geoapi/tsconfig.json
@@ -14,7 +14,8 @@
         "esModuleInterop": true,
         "types": [
             "arcgis-js-api",
-            "dojo"
+            "dojo",
+            "geojson"
         ],
         "typeRoots": [
             "./node_modules/@types"
