layer blueprint initial setup

--- a/packages/ramp-core/package.json
+++ b/packages/ramp-core/package.json
@@ -14,7 +14,9 @@
         "ag-grid-community": "^22.1.1",
         "ag-grid-vue": "^22.1.1",
         "await-to-js": "^2.1.1",
+        "axios": "0.19.2",
         "deepmerge": "~4.2.2",
+        "lodash": "4.17.15",
         "ramp-geoapi": "0.0.1",
         "vue": "^2.6.10",
         "vue-class-component": "^7.0.2",
@@ -27,6 +29,7 @@
         "@tailwindcss/custom-forms": "^0.2.1",
         "@types/clone-deep": "~4.0.1",
         "@types/jest": "^24.0.19",
+        "@types/lodash": "^4.14.149",
         "@vue/cli-plugin-babel": "^4.1.0",
         "@vue/cli-plugin-e2e-cypress": "^4.1.0",
         "@vue/cli-plugin-eslint": "^4.1.0",
