--- a/packages/ramp-core/package.json
+++ b/packages/ramp-core/package.json
@@ -11,10 +11,12 @@
         "lint": "vue-cli-service lint"
     },
     "dependencies": {
+        "@types/debounce": "^1.2.0",
         "ag-grid-community": "^22.1.1",
         "ag-grid-vue": "^22.1.1",
         "await-to-js": "^2.1.1",
         "axios": "0.19.2",
+        "debounce": "^1.2.0",
         "deepmerge": "~4.2.2",
         "lodash": "4.17.15",
         "ramp-geoapi": "0.0.1",
