chore: improve lol-level fixture handling

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,11 @@
 {
     "cSpell.words": [
+        "Appbar",
         "Proxied",
+        "TABBABLE",
+        "activedescendant",
         "behaviour",
+        "contenteditable",
         "deepmerge",
         "diligord",
         "fullhuman",
