chore: update other fixtures

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "cSpell.words": [
         "Appbar",
+        "Geosearch",
         "Proxied",
         "TABBABLE",
         "activedescendant",
@@ -8,6 +9,7 @@
         "contenteditable",
         "deepmerge",
         "diligord",
+        "esri",
         "fullhuman",
         "geoapi",
         "pathify",
