--- a/packages/ramp-core/tsconfig.json
+++ b/packages/ramp-core/tsconfig.json
@@ -13,12 +13,30 @@
         "allowJs": true,
         "sourceMap": true,
         "baseUrl": ".",
-        "types": ["webpack-env", "jest"],
+        "types": [
+            "webpack-env",
+            "jest",
+            "node"
+        ],
         "paths": {
-            "@/*": ["src/*"]
+            "@/*": [
+                "src/*"
+            ]
         },
-        "lib": ["esnext", "dom", "dom.iterable", "scripthost"]
+        "lib": [
+            "esnext",
+            "dom",
+            "dom.iterable",
+            "scripthost"
+        ]
     },
-    "include": ["src/**/*.ts", "src/**/*.vue", "tests/**/*.ts"],
-    "exclude": ["node_modules", "common"]
+    "include": [
+        "src/**/*.ts",
+        "src/**/*.vue",
+        "tests/**/*.ts"
+    ],
+    "exclude": [
+        "node_modules",
+        "common"
+    ]
 }
