chore: detect page language

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,7 @@
         "diligord",
         "esri",
         "fullhuman",
+        "gapi",
         "geoapi",
         "pathify",
         "prefetch",
