chore: add panel/screen transitions

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "Proxied",
         "TABBABLE",
         "activedescendant",
+        "animejs",
         "behaviour",
         "contenteditable",
         "deepmerge",
