--- a/packages/ramp-core/package.json
+++ b/packages/ramp-core/package.json
@@ -1,62 +1,64 @@
 {
-  "name": "ramp-core",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "serve": "vue-cli-service serve src/main-serve.ts",
-    "build": "vue-cli-service build --target lib --formats umd --name RAMP src/main-build.ts 2>&1",
-    "test:unit": "vue-cli-service test:unit",
-    "test:e2e": "vue-cli-service test:e2e",
-    "host": "http-server . -p 3001",
-    "lint": "vue-cli-service lint"
-  },
-  "dependencies": {
-    "@types/debounce": "^1.2.0",
-    "ag-grid-community": "^22.1.1",
-    "ag-grid-vue": "^22.1.1",
-    "await-to-js": "^2.1.1",
-    "axios": "0.19.2",
-    "debounce": "^1.2.0",
-    "deepmerge": "~4.2.2",
-    "lodash": "4.17.15",
-    "ramp-geoapi": "0.0.1",
-    "vue": "^2.6.10",
-    "vue-class-component": "^7.0.2",
-    "vue-i18n": "~8.16.0",
-    "vue-property-decorator": "^8.3.0",
-    "vuex": "^3.1.2",
-    "vuex-pathify": "~1.4.1"
-  },
-  "devDependencies": {
-    "@fullhuman/postcss-purgecss": "~1.3.0",
-    "@tailwindcss/custom-forms": "^0.2.1",
-    "@types/clone-deep": "~4.0.1",
-    "@types/jest": "^24.0.19",
-    "@types/lodash": "^4.14.149",
-    "@types/node": "~13.11.0",
-    "@vue/cli-plugin-babel": "^4.1.0",
-    "@vue/cli-plugin-e2e-cypress": "^4.1.0",
-    "@vue/cli-plugin-eslint": "^4.1.0",
-    "@vue/cli-plugin-typescript": "^4.1.0",
-    "@vue/cli-plugin-unit-jest": "^4.1.0",
-    "@vue/cli-plugin-vuex": "^4.1.0",
-    "@vue/cli-service": "^4.1.0",
-    "@vue/eslint-config-prettier": "^5.0.0",
-    "@vue/eslint-config-typescript": "^4.0.0",
-    "@vue/test-utils": "1.0.0-beta.29",
-    "dsv-loader": "~2.0.0",
-    "eslint": "^5.16.0",
-    "eslint-plugin-prettier": "^3.1.1",
-    "eslint-plugin-vue": "^6.0.0",
-    "http-server": "^0.12.0",
-    "postcss-nested": "~4.2.1",
-    "prettier": "^1.19.1",
-    "sass": "^1.23.7",
-    "sass-loader": "^8.0.0",
-    "tailwindcss": "~1.1.4",
-    "tslib": "~1.10.0",
-    "typescript": "~3.5.3",
-    "vue-template-compiler": "^2.6.10",
-    "wrapper-webpack-plugin": "2.1.0"
-  }
+    "name": "ramp-core",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "serve": "vue-cli-service serve src/main-serve.ts",
+        "build": "vue-cli-service build --target lib --formats umd --name RAMP src/main-build.ts 2>&1",
+        "test:unit": "vue-cli-service test:unit",
+        "test:e2e": "vue-cli-service test:e2e",
+        "host": "http-server . -p 3001",
+        "lint": "vue-cli-service lint"
+    },
+    "dependencies": {
+        "ag-grid-community": "^22.1.1",
+        "ag-grid-vue": "^22.1.1",
+        "animejs": "~3.2.0",
+        "await-to-js": "^2.1.1",
+        "axios": "0.19.2",
+        "debounce": "^1.2.0",
+        "deepmerge": "~4.2.2",
+        "lodash": "4.17.15",
+        "ramp-geoapi": "0.0.1",
+        "vue": "^2.6.10",
+        "vue-class-component": "^7.0.2",
+        "vue-i18n": "~8.16.0",
+        "vue-property-decorator": "^8.3.0",
+        "vuex": "^3.1.2",
+        "vuex-pathify": "~1.4.1"
+    },
+    "devDependencies": {
+        "@fullhuman/postcss-purgecss": "~1.3.0",
+        "@tailwindcss/custom-forms": "^0.2.1",
+        "@types/animejs": "~3.1.0",
+        "@types/clone-deep": "~4.0.1",
+        "@types/debounce": "^1.2.0",
+        "@types/jest": "^24.0.19",
+        "@types/lodash": "^4.14.149",
+        "@types/node": "~13.11.0",
+        "@vue/cli-plugin-babel": "^4.1.0",
+        "@vue/cli-plugin-e2e-cypress": "^4.1.0",
+        "@vue/cli-plugin-eslint": "^4.1.0",
+        "@vue/cli-plugin-typescript": "^4.1.0",
+        "@vue/cli-plugin-unit-jest": "^4.1.0",
+        "@vue/cli-plugin-vuex": "^4.1.0",
+        "@vue/cli-service": "^4.1.0",
+        "@vue/eslint-config-prettier": "^5.0.0",
+        "@vue/eslint-config-typescript": "^4.0.0",
+        "@vue/test-utils": "1.0.0-beta.29",
+        "dsv-loader": "~2.0.0",
+        "eslint": "^5.16.0",
+        "eslint-plugin-prettier": "^3.1.1",
+        "eslint-plugin-vue": "^6.0.0",
+        "http-server": "^0.12.0",
+        "postcss-nested": "~4.2.1",
+        "prettier": "^1.19.1",
+        "sass": "^1.23.7",
+        "sass-loader": "^8.0.0",
+        "tailwindcss": "~1.1.4",
+        "tslib": "~1.10.0",
+        "typescript": "~3.5.3",
+        "vue-template-compiler": "^2.6.10",
+        "wrapper-webpack-plugin": "2.1.0"
+    }
 }
