chore: create ramp-sample-fixtures package

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,11 +9,14 @@
         "behaviour",
         "contenteditable",
         "deepmerge",
+        "devtool",
         "diligord",
         "esri",
         "fullhuman",
         "gapi",
         "geoapi",
+        "iklob",
+        "mouruge",
         "pathify",
         "prefetch",
         "purgecss",
