--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "TABBABLE",
         "activedescendant",
         "animejs",
+        "basemap",
         "behaviour",
         "contenteditable",
         "deepmerge",
