chore: jazz up locale loader

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "animejs",
         "basemap",
         "behaviour",
+        "cacheable",
         "contenteditable",
         "deepmerge",
         "devtool",
