--- a/packages/ramp-core/package.json
+++ b/packages/ramp-core/package.json
@@ -20,6 +20,7 @@
         "deepmerge": "~4.2.2",
         "lodash": "4.17.15",
         "ramp-geoapi": "0.0.1",
+        "ramp-locale-loader": "0.0.1",
         "ramp-sample-fixtures": "0.0.1",
         "vue": "^2.6.10",
         "vue-class-component": "^7.0.2",
@@ -47,7 +48,6 @@
         "@vue/eslint-config-prettier": "^5.0.0",
         "@vue/eslint-config-typescript": "^4.0.0",
         "@vue/test-utils": "1.0.0-beta.29",
-        "dsv-loader": "~2.0.0",
         "eslint": "^5.16.0",
         "eslint-plugin-prettier": "^3.1.1",
         "eslint-plugin-vue": "^6.0.0",
