--- a/packages/ramp-core/package.json
+++ b/packages/ramp-core/package.json
@@ -22,6 +22,7 @@
         "ramp-geoapi": "0.0.1",
         "ramp-locale-loader": "0.0.1",
         "ramp-sample-fixtures": "0.0.1",
+        "raw-loader": "^4.0.1",
         "screenfull": "~5.0.2",
         "vue": "^2.6.10",
         "vue-class-component": "^7.0.2",
