--- a/packages/ramp-core/package.json
+++ b/packages/ramp-core/package.json
@@ -34,7 +34,6 @@
         "vuex-pathify": "~1.4.1"
     },
     "devDependencies": {
-        "@fullhuman/postcss-purgecss": "~1.3.0",
         "@tailwindcss/custom-forms": "^0.2.1",
         "@types/animejs": "~3.1.0",
         "@types/clone-deep": "~4.0.1",
@@ -60,7 +59,7 @@
         "prettier": "^1.19.1",
         "sass": "^1.23.7",
         "sass-loader": "^8.0.0",
-        "tailwindcss": "~1.1.4",
+        "tailwindcss": "^1.1.4",
         "tslib": "~1.10.0",
         "typescript": "~3.8.3",
         "vue-template-compiler": "^2.6.10",
