--- a/packages/ramp-core/package.json
+++ b/packages/ramp-core/package.json
@@ -28,6 +28,8 @@
         "vue-class-component": "^7.0.2",
         "vue-i18n": "~8.16.0",
         "vue-property-decorator": "^8.3.0",
+        "vue-slider-component": "^3.2.2",
+        "vue-js-toggle-button": "^1.3.3",
         "vuex": "^3.1.2",
         "vuex-pathify": "~1.4.1"
     },
