--- a/packages/ramp-geoapi/package.json
+++ b/packages/ramp-geoapi/package.json
@@ -16,6 +16,7 @@
     "author": "Good ol James & Jahid, with scaffold from our fine buddy Juri Strumpflohner",
     "license": "ISC",
     "dependencies": {
+        "deepmerge": "~4.2.2",
         "proj4": "2.6.0",
         "svg.js": "2.7.1",
         "terraformer": "1.0.9",
