--- a/packages/ramp-core/package.json
+++ b/packages/ramp-core/package.json
@@ -19,6 +19,7 @@
         "debounce": "^1.2.0",
         "deepmerge": "~4.2.2",
         "lodash": "4.17.15",
+        "marked": "^1.2.2",
         "ramp-geoapi": "0.0.1",
         "ramp-locale-loader": "0.0.1",
         "ramp-sample-fixtures": "0.0.1",
@@ -27,9 +28,9 @@
         "vue": "^2.6.10",
         "vue-class-component": "^7.0.2",
         "vue-i18n": "~8.16.0",
+        "vue-js-toggle-button": "^1.3.3",
         "vue-property-decorator": "^8.3.0",
         "vue-slider-component": "^3.2.2",
-        "vue-js-toggle-button": "^1.3.3",
         "vuex": "^3.1.2",
         "vuex-pathify": "~1.4.1"
     },
@@ -40,6 +41,7 @@
         "@types/debounce": "^1.2.0",
         "@types/jest": "^24.0.19",
         "@types/lodash": "^4.14.149",
+        "@types/marked": "^1.1.0",
         "@types/node": "~13.11.0",
         "@vue/cli-plugin-babel": "^4.1.0",
         "@vue/cli-plugin-e2e-cypress": "^4.1.0",
