change help path for prod build

--- a/packages/ramp-core/package.json
+++ b/packages/ramp-core/package.json
@@ -4,7 +4,7 @@
     "private": true,
     "scripts": {
         "serve": "vue-cli-service serve",
-        "build": "vue-cli-service build --target lib --formats umd --name RAMP src/main-build.ts 2>&1",
+        "build": "cross-env VUE_APP_BUILD_TARGET=lib vue-cli-service build --target lib --formats umd --name RAMP src/main-build.ts 2>&1",
         "test:unit": "vue-cli-service test:unit",
         "test:e2e": "vue-cli-service test:e2e",
         "host": "http-server . -p 3001",
@@ -53,6 +53,7 @@
         "@vue/eslint-config-prettier": "^5.0.0",
         "@vue/eslint-config-typescript": "^4.0.0",
         "@vue/test-utils": "1.0.0-beta.29",
+        "cross-env": "^7.0.2",
         "eslint": "^5.16.0",
         "eslint-plugin-prettier": "^3.1.1",
         "eslint-plugin-vue": "^6.0.0",
