--- a/packages/ramp-core/package.json
+++ b/packages/ramp-core/package.json
@@ -55,6 +55,7 @@
         "@vue/test-utils": "1.0.0-beta.29",
         "autoprefixer": "^9.8.6",
         "cross-env": "^7.0.2",
+        "cypress": "^6.4.0",
         "eslint": "^5.16.0",
         "eslint-plugin-prettier": "^3.1.1",
         "eslint-plugin-vue": "^6.0.0",
