--- a/packages/ramp-core/package.json
+++ b/packages/ramp-core/package.json
@@ -44,7 +44,7 @@
         "@types/marked": "^1.1.0",
         "@types/node": "~13.11.0",
         "@vue/cli-plugin-babel": "^4.1.0",
-        "@vue/cli-plugin-e2e-cypress": "^4.1.0",
+        "@vue/cli-plugin-e2e-cypress": "^5.0.0-alpha.3",
         "@vue/cli-plugin-eslint": "^4.1.0",
         "@vue/cli-plugin-typescript": "^4.1.0",
         "@vue/cli-plugin-unit-jest": "^4.1.0",
