feat: export-v1 fixture (not complete)
Relates #189

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,9 @@
     "cSpell.words": [
         "Appbar",
         "Geosearch",
+        "Helvetica",
         "Proxied",
+        "Segoe",
         "TABBABLE",
         "WKID",
         "activedescendant",
