--- a/packages/ramp-core/package.json
+++ b/packages/ramp-core/package.json
@@ -20,20 +20,22 @@
         "axios": "0.19.2",
         "debounce": "^1.2.0",
         "deepmerge": "~4.2.2",
+        "fabric": "^4.3.1",
+        "file-saver": "~2.0.5",
         "marked": "^1.2.2",
         "ramp-geoapi": "workspace:*",
         "ramp-locale-loader": "workspace:*",
         "ramp-sample-fixtures": "workspace:*",
         "raw-loader": "^4.0.1",
         "screenfull": "~5.0.2",
-        "vue": "^2.6.10",
         "vue-class-component": "^7.0.2",
         "vue-i18n": "~8.16.0",
         "vue-js-toggle-button": "^1.3.3",
         "vue-property-decorator": "^8.3.0",
         "vue-slider-component": "^3.2.11",
-        "vuex": "^3.1.2",
-        "vuex-pathify": "~1.4.1"
+        "vue": "^2.6.10",
+        "vuex-pathify": "~1.4.1",
+        "vuex": "^3.1.2"
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.2.1",
@@ -41,6 +43,8 @@
         "@types/animejs": "~3.1.0",
         "@types/clone-deep": "~4.0.1",
         "@types/debounce": "^1.2.0",
+        "@types/fabric": "^4.2.2",
+        "@types/file-saver": "~2.0.1",
         "@types/jest": "^24.0.19",
         "@types/lodash": "^4.14.149",
         "@types/marked": "^1.1.0",
@@ -58,14 +62,14 @@
         "autoprefixer": "^9.8.6",
         "cross-env": "^7.0.2",
         "cypress": "^6.4.0",
-        "eslint": "^5.16.0",
         "eslint-plugin-prettier": "^3.1.1",
         "eslint-plugin-vue": "^6.0.0",
+        "eslint": "^5.16.0",
         "http-server": "^0.12.0",
         "postcss": "^7.0.35",
         "prettier": "^1.19.1",
-        "sass": "^1.23.7",
         "sass-loader": "^8.0.0",
+        "sass": "^1.23.7",
         "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
         "tslib": "~1.10.0",
         "typedoc": "^0.20.34",
