--- a/packages/ramp-core/package.json
+++ b/packages/ramp-core/package.json
@@ -24,6 +24,7 @@
         "debounce": "^1.2.0",
         "deepmerge": "~4.2.2",
         "fabric": "^4.3.1",
+        "fast-xml-parser": "~3.19.0",
         "file-saver": "~2.0.5",
         "marked": "^1.2.2",
         "proj4": "2.6.0",
