--- a/packages/ramp-core/package.json
+++ b/packages/ramp-core/package.json
@@ -41,6 +41,7 @@
         "vue-js-toggle-button": "^1.3.3",
         "vue-property-decorator": "^8.3.0",
         "vue-slider-component": "^3.2.11",
+        "vue-tippy": "~4.10.1",
         "vue": "^2.6.10",
         "vuex-pathify": "~1.4.1",
         "vuex": "^3.1.2",
