--- a/packages/ramp-core/package.json
+++ b/packages/ramp-core/package.json
@@ -36,6 +36,7 @@
         "svg.js": "2.7.1",
         "terraformer": "1.0.9",
         "terraformer-arcgis-parser": "1.1.0",
+        "throttle-debounce": "~3.0.1",
         "vue-class-component": "^7.0.2",
         "vue-i18n": "~8.16.0",
         "vue-js-toggle-button": "^1.3.3",
@@ -63,6 +64,7 @@
         "@types/marked": "^1.1.0",
         "@types/node": "~13.11.0",
         "@types/proj4": "2.5.0",
+        "@types/throttle-debounce": "~2.1.0",
         "@vue/cli-plugin-babel": "^4.1.0",
         "@vue/cli-plugin-e2e-cypress": "^5.0.0-alpha.3",
         "@vue/cli-plugin-eslint": "^4.1.0",
