--- a/packages/ramp-core/package.json
+++ b/packages/ramp-core/package.json
@@ -15,6 +15,7 @@
     "dependencies": {
         "@arcgis/core": "4.19.3",
         "@braid/vue-formulate": "~2.5.2",
+        "@popperjs/core": "~2.9.2",
         "ag-grid-community": "^22.1.1",
         "ag-grid-vue": "^22.1.1",
         "animejs": "~3.2.0",
