--- a/packages/ramp-core/package.json
+++ b/packages/ramp-core/package.json
@@ -3,7 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "serve": "vue-cli-service serve",
+        "serve": "cross-env NODE_ENV=development TAILWIND_MODE=watch vue-cli-service serve --host localhost",
         "build": "cross-env VUE_APP_BUILD_TARGET=lib vue-cli-service build --target lib --formats umd --name RAMP src/main-build.ts 2>&1 && rm ./dist/demo.html",
         "test:unit": "vue-cli-service test:unit",
         "test:e2e": "vue-cli-service test:e2e",
