--- a/packages/ramp-core/package.json
+++ b/packages/ramp-core/package.json
@@ -27,6 +27,8 @@
         "fabric": "^4.3.1",
         "fast-xml-parser": "~3.19.0",
         "file-saver": "~2.0.5",
+        "linkify-html": "~3.0.4",
+        "linkifyjs": "~3.0.4",
         "marked": "^1.2.2",
         "proj4": "2.6.0",
         "ramp-locale-loader": "workspace:*",
