--- a/packages/ramp-core/package.json
+++ b/packages/ramp-core/package.json
@@ -48,6 +48,7 @@
         "vue-property-decorator": "^10.0.0-rc.2",
         "vue-slider-component": "next",
         "vue-tippy": "next",
+        "vuedraggable": "next",
         "tippy.js": "next",
         "vuex": "^4.0.0",
         "vuex-pathify": "~1.4.1",
