--- a/packages/ramp-core/package.json
+++ b/packages/ramp-core/package.json
@@ -15,6 +15,7 @@
     "dependencies": {
         "@arcgis/core": "4.22.2",
         "@braid/vue-formulate": "~2.5.2",
+        "@ecgc/vue-slider-component": "4.0.0-beta.7",
         "@popperjs/core": "~2.9.2",
         "@vueform/toggle": "2.0.0",
         "ag-grid-community": "26.0.0",
@@ -46,7 +47,6 @@
         "vue-class-component": "^8.0.0-rc.1",
         "vue-i18n": "^9.1.7",
         "vue-property-decorator": "^10.0.0-rc.2",
-        "vue-slider-component": "next",
         "vue-tippy": "next",
         "vuedraggable": "next",
         "tippy.js": "next",
