--- a/packages/ramp-core/package.json
+++ b/packages/ramp-core/package.json
@@ -18,8 +18,8 @@
         "@ecgc/vue-slider-component": "4.0.0-beta.7",
         "@popperjs/core": "~2.9.2",
         "@vueform/toggle": "2.0.0",
-        "ag-grid-community": "26.0.0",
-        "ag-grid-vue3": "26.0.0",
+        "ag-grid-community": "^27.0.0",
+        "ag-grid-vue3": "^27.0.0",
         "animejs": "~3.2.0",
         "await-to-js": "^3.0.0",
         "axios": "0.21.2",
