--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -4,6 +4,6 @@
         "bradlc.vscode-tailwindcss",
         "austenc.tailwind-docs",
         "gruntfuggly.todo-tree",
-        "johnsoncodehk.volar"
+        "vue.volar"
     ]
 }
