--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "devDependencies": {
         "@cypress/vite-dev-server": "^2.2.2",
         "@cypress/vue": "^3.1.1",
+        "@jamesives/github-pages-deploy-action": "^4.3.3",
         "@rushstack/eslint-patch": "^1.1.0",
         "@tailwindcss/forms": "^0.5.0",
         "@types/animejs": "~3.1.0",
