build: fix lib build to improve build speed

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,6 +50,7 @@ jobs:
 
             - name: Join both dev/prod caches
               run: |
+                  rm -rf dist
                   mkdir dist
                   mv development/* production/* dist
 
