--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "tiny-emitter": "^2.1.0",
         "tippy.js": "next",
         "vue": "^3.2.31",
+        "vue-accessible-color-picker": "^4.0.3",
         "vue-i18n": "^9.1.7",
         "vue-tippy": "next",
         "vuedraggable": "next",
