build: add typescript PR check

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
         "paths": {
             "@/*": ["./src/*"]
         },
-        "lib": ["DOM", "DOM.Iterable", "ES2020"]
+        "lib": ["DOM", "DOM.Iterable", "ES2020"],
+        "pretty": true
     },
 
     "references": [
