--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -1,32 +1,50 @@
 on:
     pull_request:
-        branches: [main]
+        types: [opened, synchronize]
+
+    push:
+        branches:
+            - 'main'
+            - 'develop'
+        tags:
+            - v**
 env:
     NODE_VERSION: '17.9.0'
 jobs:
-    pr-checks:
+    pr-status-checks:
         name: PR Status Checks
         runs-on: ubuntu-latest
         steps:
-            - uses: actions/checkout@v2
+            - uses: actions/checkout@v3
 
-            - uses: actions/setup-node@v1
+            - uses: actions/setup-node@v3
               with:
                   node-version: ${{ env.NODE_VERSION }}
+                  cache: 'npm'
 
-            - name: Extract branch or tag name
-              shell: bash
-              run: echo "##[set-output name=name;]$(echo ${GITHUB_REF#refs/*/})"
-              id: extract_ref
+            - name: Try to restore node_modules folder from cache
+              id: cache-node-modules
+              uses: actions/cache@v3
+              with:
+                  path: ./node_modules
+                  key: npm-${{ hashFiles('./package-lock.json') }}
 
-            - name: Check if Typescript is happy
-              shell: bash
-              run: echo "No"
+            - name: Otherwise install npm dependencies
+              if: steps.cache-node-modules.outputs.cache-hit != 'true'
+              run: npm ci
 
-            - name: Check if ESLint is happy
-              shell: bash
-              run: echo "No"
+            - uses: milespetrov/status-checks@main
+              id: pr-checks
+              with:
+                  gh-token: ${{ secrets.GITHUB_TOKEN }}
 
-            - name: Check if prettier is happy
-              shell: bash
-              run: echo "Yes"
+            - name: Typescript badge
+              if: always()
+              uses: RubbaBoy/BYOB@v1.3.0
+              with:
+                  NAME: tsbadge
+                  ICON: typescript
+                  LABEL: 'TS Errors'
+                  STATUS: ${{ steps.pr-checks.outputs.ts-errors }}
+                  COLOR: blue
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
