--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
         "test:unit": "cypress open-ct",
         "test:unit:ci": "cypress run-ct --quiet --reporter spec",
         "typecheck": "vue-tsc --noEmit",
-        "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+        "formatcheck": "prettier . -c",
+        "lintcheck": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts",
+        "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix",
         "format": "prettier .  --write"
     },
     "dependencies": {
@@ -70,8 +72,7 @@
     "devDependencies": {
         "@cypress/vite-dev-server": "^2.2.2",
         "@cypress/vue": "^3.1.1",
-        "@jamesives/github-pages-deploy-action": "^4.3.3",
-        "@rushstack/eslint-patch": "^1.1.0",
+        "@rushstack/eslint-patch": "^1.2.0",
         "@tailwindcss/forms": "^0.5.0",
         "@types/animejs": "~3.1.0",
         "@types/clone-deep": "~4.0.1",
@@ -87,18 +88,18 @@
         "@types/throttle-debounce": "~2.1.0",
         "@vitejs/plugin-vue": "^2.3.1",
         "@vue/eslint-config-prettier": "^7.0.0",
-        "@vue/eslint-config-typescript": "^10.0.0",
+        "@vue/eslint-config-typescript": "^11.0.2",
         "@vue/tsconfig": "^0.1.3",
         "autoprefixer": "^10.4.4",
         "cypress": "^9.5.3",
         "cypress-plugin-tab": "~1.0.5",
         "d3-dsv": "^3.0.1",
-        "eslint": "^8.5.0",
+        "eslint": "^8.23.1",
         "eslint-plugin-cypress": "^2.12.1",
-        "eslint-plugin-vue": "^8.2.0",
+        "eslint-plugin-vue": "^9.5.1",
         "postcss": "^8.4.12",
         "postcss-import": "^14.1.0",
-        "prettier": "^2.5.1",
+        "prettier": "^2.7.1",
         "sass": "^1.50.0",
         "start-server-and-test": "^1.14.0",
         "tailwindcss": "^3.0.23",
