--- a/package.json
+++ b/package.json
@@ -20,37 +20,37 @@
         "@arcgis/core": "4.25.5",
         "@braid/vue-formulate": "~2.5.2",
         "@ecgc/vue-slider-component": "4.0.0-beta.7",
-        "@popperjs/core": "~2.9.2",
-        "@vueform/toggle": "2.0.0",
-        "ag-grid-community": "^27.0.0",
-        "ag-grid-vue3": "^27.0.0",
+        "@popperjs/core": "^2.11.6",
+        "@vueform/toggle": "^2.1.3",
+        "ag-grid-community": "^27.3.0",
+        "ag-grid-vue3": "^27.3.0",
         "animejs": "~3.2.0",
         "await-to-js": "^3.0.0",
-        "axios": "0.21.2",
-        "csv2geojson": "5.1.1",
-        "deepmerge": "~4.2.2",
-        "fabric": "^4.3.1",
+        "axios": "^1.3.3",
+        "csv2geojson": "^5.1.2",
+        "deepmerge": "^4.3.0",
+        "fabric": "^5.3.0",
         "fast-xml-parser": "~3.19.0",
         "file-saver": "~2.0.5",
-        "linkify-html": "~3.0.4",
-        "linkifyjs": "~3.0.4",
+        "linkify-html": "^4.1.0",
+        "linkifyjs": "^4.1.0",
         "marked": "^4.0.10",
-        "pinia": "^2.0.13",
-        "proj4": "2.6.0",
+        "pinia": "^2.0.30",
+        "proj4": "^2.8.1",
         "screenfull": "~5.0.2",
         "shpjs": "^4.0.2",
         "svg.js": "2.7.1",
-        "terraformer": "1.0.9",
+        "terraformer": "^1.0.12",
         "terraformer-arcgis-parser": "1.1.0",
         "throttle-debounce": "~3.0.1",
         "tiny-emitter": "^2.1.0",
-        "tippy.js": "next",
+        "tippy.js": "^6.3.7",
         "vue": "^3.2.31",
         "vue-accessible-color-picker": "^4.0.3",
         "vue-i18n": "^9.1.7",
-        "vue-tippy": "next",
+        "vue-tippy": "^6.0.0",
         "vuedraggable": "next",
-        "vuex": "^4.0.0",
+        "vuex": "^4.0.2",
         "vuex-pathify": "1.4.5"
     },
     "engines": {
@@ -84,7 +84,7 @@
         "@types/lodash": "^4.14.149",
         "@types/marked": "^4.0.1",
         "@types/node": "^16.11.26",
-        "@types/proj4": "2.5.0",
+        "@types/proj4": "^2.5.2",
         "@types/throttle-debounce": "~2.1.0",
         "@vitejs/plugin-vue": "^2.3.1",
         "@vue/eslint-config-prettier": "^7.0.0",
@@ -104,9 +104,8 @@
         "start-server-and-test": "^1.14.0",
         "tailwindcss": "^3.0.23",
         "typedoc": "^0.22.14",
-        "typescript": "~4.6.3",
+        "typescript": "^4.6.4",
         "vite": "^2.9.12",
-        "vue-tsc": "^0.33.9",
-        "vuepress": "~1.9.7"
+        "vue-tsc": "^1.2.0"
     }
 }
