--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
+        "dev-http": "vite --https=false",
         "build": "vite build",
         "preview": "vite preview --port 5050",
         "test:e2e": "start-server-and-test preview http://127.0.0.1:5050/ 'cypress open'",
@@ -86,7 +87,7 @@
         "@types/node": "^16.11.26",
         "@types/proj4": "^2.5.2",
         "@types/throttle-debounce": "~2.1.0",
-        "@vitejs/plugin-vue": "^2.3.1",
+        "@vitejs/plugin-vue": "^4.0.0",
         "@vue/eslint-config-prettier": "^7.0.0",
         "@vue/eslint-config-typescript": "^11.0.2",
         "@vue/tsconfig": "^0.1.3",
@@ -105,7 +106,8 @@
         "tailwindcss": "^3.0.23",
         "typedoc": "^0.22.14",
         "typescript": "^4.6.4",
-        "vite": "^2.9.12",
+        "vite": "^4.1.4",
+        "vite-plugin-mkcert": "^1.13.3",
         "vue-tsc": "^1.2.0"
     }
 }
