--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     },
     "dependencies": {
         "@arcgis/core": "4.26.5",
-        "@braid/vue-formulate": "~2.5.2",
         "@ecgc/vue-slider-component": "4.0.0-beta.7",
         "@popperjs/core": "^2.11.6",
         "@vueform/toggle": "^2.1.3",
@@ -27,17 +26,16 @@
         "ag-grid-vue3": "^27.3.0",
         "animejs": "~3.2.0",
         "await-to-js": "^3.0.0",
-        "axios": "^1.3.3",
         "csv2geojson": "^5.1.2",
         "deepmerge": "^4.3.0",
         "fabric": "^5.3.0",
         "fast-xml-parser": "~3.19.0",
         "file-saver": "~2.0.5",
         "linkify-html": "^4.1.0",
-        "linkifyjs": "^4.1.0",
         "marked": "^4.0.10",
         "pinia": "^2.0.30",
         "proj4": "^2.8.1",
+        "redaxios": "^0.5.1",
         "screenfull": "~5.0.2",
         "shpjs": "^4.0.2",
         "svg.js": "2.7.1",
