Fix stores not correctly resetting to initial state

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "fast-xml-parser": "~3.19.0",
         "file-saver": "~2.0.5",
         "linkify-html": "^4.1.0",
+        "lodash.clonedeep": "^4.5.0",
         "marked": "^4.0.10",
         "pinia": "^2.0.30",
         "proj4": "^2.8.1",
@@ -74,6 +75,7 @@
         "@types/geojson": "^1.0.0",
         "@types/jest": "^24.0.19",
         "@types/lodash": "^4.14.149",
+        "@types/lodash.clonedeep": "^4.5.7",
         "@types/marked": "^4.0.1",
         "@types/node": "^16.11.26",
         "@types/proj4": "^2.5.2",
