--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -11,6 +11,7 @@ jobs:
     deploy-to-pages:
         name: Deploy to GitHub pages
         runs-on: ubuntu-latest
+        if: (github.head_ref || github.ref_name) != 'documentation'
         steps:
             - uses: actions/checkout@v3
 
@@ -20,12 +21,40 @@ jobs:
                   path: dist
                   key: dist-${{ inputs.cache_sha }}
 
+            - name: Get documentation files
+              uses: actions/cache@v3
+              with:
+                  path: documentation
+                  key: documentation-${{ inputs.cache_sha }}
+
             - name: Deploy 🚀
               uses: JamesIves/github-pages-deploy-action@v4.3.3
               with:
                   branch: gh-pages
                   folder: dist
                   target-folder: ${{ github.head_ref || github.ref_name }}
+                  single-commit: true
+
+            - name: Get RAMP version
+              uses: martinbeentjes/npm-get-version-action@v1.3.1
+              if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+              id: package-version
+
+            - name: Regex match RAMP version
+              uses: actions-ecosystem/action-regex-match@v2
+              if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+              id: regex-match
+              with:
+                  text: ${{ steps.package-version.outputs.current-version }}
+                  regex: '(\d+\.\d+\.\d+)'
+
+            - name: Deploy Docs 📜
+              uses: JamesIves/github-pages-deploy-action@v4.3.3
+              if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+              with:
+                  branch: gh-pages
+                  folder: documentation
+                  target-folder: documentation/${{ steps.regex-match.outputs.group1 || steps.package-version.outputs.current-version }}
                   single-commit: true
 
             - uses: actions/github-script@v6
