--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "ramp",
-    "version": "4.2.0-beta",
+    "version": "4.2.0",
     "type": "module",
     "scripts": {
         "dev": "vite",
