Update build to support more formats and package.json updates for npm/jsdelivr hosting

--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -72,10 +72,10 @@ jobs:
                   regex: false
 
             - name: Build the ts docs!
-              run: npm run build:ts-docs
+              run: npm run ts-docs:generate
 
             - name: Build the vitepress docs!
-              run: npm run build:vite-docs
+              run: npm run vite-docs:generate
 
             - name: Consolidate docsite files
               run: |
