--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -72,7 +72,7 @@ jobs:
                   regex: false
 
             - name: Build the ts docs!
-              run: npm run ts-docs:generate --skipErrorChecking
+              run: npm run ts-docs:generate
 
             - name: Build the vitepress docs!
               run: npm run vite-docs:generate
