--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,3 +1,5 @@
+name: Main Build Workflow
+
 on:
     pull_request_target:
         types: [opened, synchronize, reopened]
@@ -10,59 +12,66 @@ on:
             - v**
 
 jobs:
-    build-docs:
-        name: Build for docsite
+    docs:
+        name: Create documentation
         if: (github.event_name == 'push' && github.ref == 'refs/heads/main') || startsWith(github.ref, 'refs/tags/v')
         uses: ./.github/workflows/build-docs.yml
         with:
             cache_sha: ${{ format('{0}-{1}', github.ref_name, github.event.pull_request.head.sha || github.sha) }}
 
-    post-build:
-        name: Merge dev & prod into a bundle
-        needs: [build-docs]
-        if: |
-            always() &&
-            (needs.build-docs.result == 'success' || needs.build-docs.result == 'skipped')
+    build:
+        name: Build the project
         runs-on: ubuntu-latest
         steps:
-            - uses: actions/checkout@v3
+            - uses: actions/checkout@v4
               with:
                   ref: ${{ github.event.pull_request.head.ref || github.ref_name }}
                   repository: ${{ github.event.pull_request.head.repo.full_name || github.repository }}
 
-            - uses: actions/setup-node@v3
+            - uses: actions/setup-node@v4
               with:
-                node-version: '17.9.0'
+                node-version: latest
                 cache: 'npm'
 
-            - name: Build the files!
+            - name: Try to restore node_modules folder from cache
+              id: cache-node-modules
+              uses: actions/cache@v4
+              with:
+                path: ./node_modules
+                key: npm-${{ hashFiles('./package-lock.json') }}
+
+            - name: Otherwise install npm dependencies
+              if: steps.cache-node-modules.outputs.cache-hit != 'true'
+              run: npm ci
+            
+            - name: Update package.json version if necessary
+              if: startsWith(github.ref, 'refs/tags/v')
               run: |
-                  npm ci
-                  npm run build
+                TAG_VERSION=${GITHUB_REF#refs/tags/v}
+                PACKAGE_VERSION=$(node -p "require('./package.json').version")
+                if [ "$TAG_VERSION" != "$PACKAGE_VERSION" ]; then
+                    npm version --allow-same-version --no-git-tag-version $TAG_VERSION
+                    echo "::warning::Tag version ($TAG_VERSION) did not match package.json version ($PACKAGE_VERSION). Updated package.json to $TAG_VERSION."
+                else
+                    echo "::info::Tag version ($TAG_VERSION) matches package.json version ($PACKAGE_VERSION)."
+                fi
+  
+            - name: Build the files!
+              run: npm run build
               env:
                   NODE_OPTIONS: '--max-old-space-size=8192'
 
             - name: Cache dist files
-              uses: actions/cache@v3
+              uses: actions/cache@v4
               with:
                   path: dist
                   key: dist-${{ format('{0}-{1}', github.ref_name, github.event.pull_request.head.sha || github.sha) }}
 
-            - name: Get docsite files
-              uses: actions/cache@v3
-              if: (github.event_name == 'push' && github.ref == 'refs/heads/main') || startsWith(github.ref, 'refs/tags/v')
-              with:
-                  path: docs
-                  key: docs-${{ format('{0}-{1}', github.ref_name, github.event.pull_request.head.sha || github.sha) }}
-
-            - name: Add docs folder to dist
-              if: (github.event_name == 'push' && github.ref == 'refs/heads/main') || startsWith(github.ref, 'refs/tags/v')
-              run: mv docs dist
-
     deploy-pages:
-        needs: [post-build]
-        if: always() && (needs.post-build.result == 'success')
+        needs: [docs, build]
+        if: ${{ always() && needs.build.result == 'success' }}
         name: Deploy the files
-        uses: ./.github/workflows/pages.yml
+        uses: ./.github/workflows/deploy.yml
         with:
             cache_sha: ${{ format('{0}-{1}', github.ref_name, github.event.pull_request.head.sha || github.sha) }}
+        secrets: inherit
