--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "ramp",
+    "name": "ramp-pcar",
     "version": "4.5.0-beta",
     "description": "RAMP4 - The Reusable Accessible Mapping Platform, is a Javascript based web mapping platform that provides a reusable, responsive and WCAG 2.1 AA compliant common viewer for the Government of Canada. ",
     "type": "module",
